--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MFITSS IDLE TD</string>
+    <string name="app_name">MFITSS</string>
+    <string name="metal">Metal</string>
 
 </resources>
